# ai-pet

./: CHANGELOG.md  CONTRIBUTING.md  DELETE_ME.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
ai_pet/: __init__.py  __main__.py  config.py  gpt4all_app.py
config/: dev.yaml  staging.yaml
docker/: Dockerfile  README.md
docs/: api.md  installation.md  usage.md
tests/test_example/: test_hello.py
