# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai_pet"
version = "0.1.0"
description = "Awesome `ai-pet` is a AI pet chat application"
readme = "README.md"
authors = ["andeya <andeyalee@outlook.com>"]
license = "Apache Software License 2.0"
repository = "https://github.com/andeya/ai-pet"
homepage = "https://github.com/andeya/ai-pet"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"ai_pet" = "ai_pet.__main__:main"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.12"

typer = {extras = ["all"], version = "^0.4.0"}
rich = "^13.7.1"

[tool.poetry.dev-dependencies]
packaging = "^23.1"
poetry-plugin-export = "^1.7.1"
pytest = "^8.1.1"
pytest-html = "^4.1.1"
pytest-cov = "^5.0.0"
bandit = "^1.7.1"
ruff = "^0.2.0"

mkdocs = "1.5.3"
mkdocs-include-markdown-plugin = "6.0.5"
mkdocs-material = "9.4.14"
mkdocstrings = { version = "0.24.3", extras = ["python"] }
mkdocstrings-python = "1.10.0"
mkdocs-material-extensions = "1.3.1"
mkdocs-autorefs = "1.0.1"

pre-commit = "^2.21.0"
coverage = "^6.1.2"
coverage-badge = "^1.1.0"
safety = "^2.3.5"
darglint = "^1.8.1"

[tool.ruff]
# https://docs.astral.sh/ruff/settings
line-length = 88

# Exclude a variety of commonly ignored directories.
respect-gitignore = true
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
ignore-init-module-imports = true
select = ["E", "W", "F", "I"]
extend-select = ["I"]
ignore = ["F401"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
# Format all docstring code snippets with a line length of 60.
docstring-code-line-length = 60

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
source = ["tests"]
branch = true

[tool.coverage.paths]
source = ["ai_pet"]

[tool.coverage.report]
fail_under = 0
show_missing = true
